[gd_scene load_steps=2 format=3 uid="uid://b5s5dito4uyp1"]

[ext_resource type="Script" uid="uid://c75pqvu7fdwin" path="res://Scenes/Spawner/Spawner.gd" id="1_sop60"]

[node name="Spawner" type="Node3D"]
script = ExtResource("1_sop60")

[node name="TieTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AsteroidTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="TieTimer" to="." method="_on_tie_timer_timeout"]
[connection signal="timeout" from="AsteroidTimer" to="." method="_on_asteroid_timer_timeout"]
